# ktaa

./: CMakeLists.txt  README.md  TODO.txt  emura.cpp  hwg.cpp  ours.cpp  results.txt  test.cpp
SKTAA/: sktaa  sktaa.cpp
include/: Buff.h  Group.h  Pairing.h  SHA256.h  Timer.h  Zr.h  pbc++.h
src/: Group.cpp  Pairing.cpp  SHA256.cpp  Timer.cpp  Zr.cpp
